--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container">
+        <div id="background"></div>
         <nav id="navbar">
             <div class="logoContainer">
                 <img src="assets/logo.svg" alt="RocketShoes logo">
@@ -34,6 +35,7 @@
             <section class="ctaSection">
                 <h1>Tênis Esportivo Para Corrida Top</h1>
                 <p>Esse tênis tem o intuito de te deixar ainda mais fitness, focado, e musculoso.</p>
+                <span>R$ 1.000,00</span>
                 <button>Comprar</button>
             </section>
             <section class="pictureSection">
@@ -48,7 +50,7 @@
             </section>
         </main>
 
-        <div class="mediaLinksContainer">
+        <div id="mediaLinksContainer">
             <div class="mediaLinksImgContainer">
                 <img src="assets/img-video.png" alt="video of a runner">
             </div>
@@ -61,7 +63,7 @@
                 </ul>
             </div>
             <div class="moreButton">
-                <span>Explore mais</span>
+                <span><a href="#">Explore mais</a></span>
                 <img src="assets/icon-arrow.svg" alt="arrow">
             </div>
         </div>
